# bigpimuffvst3

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: Hardening.cmake
docs/: netlist.md
gui/: make_footswitch.sh  make_knob.sh
packaging/: bigbubblemuff.desktop  install.sh  makedeb.sh  makedist.sh  uninstall.sh
src/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  StateIO.h
src/dsp/: BigMuffPi.cpp  BigMuffPi.h  DiodeClipper.h  Filters.h  Netlist.h  NoiseGate.h  ToneStack.h  TransistorStage.h
src/ui/: FootswitchButton.cpp  FootswitchButton.h  LedComponent.h  MuffLookAndFeel.cpp  MuffLookAndFeel.h  PresetBar.cpp  PresetBar.h
tests/: CMakeLists.txt  dsp_tests.cpp  main.cpp
